# azure_storage_c_sdk_lite

./: .gitmodules  CMakeLists.txt  README.md
azure-storage-cpp-lite/include/: tinyxml2_parser.h  xml_parser_base.h
azure-storage-cpp-lite/include/blob/: blob_client.h
azure-storage-cpp-lite/src/: tinyxml2_parser.cpp
azure-storage-cpp-lite/src/blob/: blob_client.cpp
azure_storage_c_sdk_blob_lite/: CMakeLists.txt
azure_storage_c_sdk_blob_lite/blob/: blob_client.cpp  blob_client_wrapper.cpp
azure_storage_c_sdk_blob_lite/include/blob/: blob_client.h
azure_storage_c_sdk_blob_lite/sample/: sample.cpp
sample/: Makefile  run  sample.cpp
test_ts_file/: readme.txt
